--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon says game</title>
-    <link rel="stylesheet" href="simon.css"
+    <link rel="stylesheet" href="index.css"
 </head>
 <body>
     <h1>Simon Game</h1>
@@ -19,6 +19,6 @@
             <div class="btn purple" type="button" id="purple">4</div>
         </div>
     </div>
-    <script src="simon.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
